[package]
name = "appattest-rs"
license = "MIT"
edition = "2021"
author = ["Ayodeji Akinola <akinayodeji4all@gmail.com>"]
repository = "https://github.com/TheDhejavu/appattest-rs"
version = "0.1.0"
readme = "README.md"
description = "A Rust module for validating Apple App Attestations and Assertions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
sha2 = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
openssl = "0.10"
p256 = "0.13"
ciborium = "0.2"
minicbor = "0.25"
x509-parser = "0.18"

[features]
testing = []
