[package]
name = "appattest-rs"
license = "MIT"
edition = "2021"
author = ["Ayodeji Akinola <akinayodeji4all@gmail.com>"]
repository = "https://github.com/TheDhejavu/appattest-rs"
version = "0.1.0"
readme = "README.md"
description = "A Rust module for validating Apple App Attestations and Assertions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5"
sha2 = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"], optional = true }
base64 = "0.22"
openssl = { version = "0.10", optional = true }
aws-lc-rs = { version = "1", default-features = false }
arrayvec = "0.7"
minicbor = "0.25"
x509-parser = "0.18"
rustls-pki-types = "1"
ciborium = { version = "0.2", optional = true }
p256 = { version = "0.13", optional = true }
webpki = { package = "rustls-webpki", version = "0.103.9", default-features = false, features = ["aws-lc-rs", "alloc"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
testing = ["dep:p256", "dep:ciborium", "dep:openssl"]
